# memory-oriented-load-balancer

./: .gitignore  COMMANDS.txt  TEST_SCENARIOS.md  docker-compose.yml
load-balancer/: Cargo.toml  Dockerfile  README.md
load-balancer/src/: load_balancer.rs  main.rs  strategy.rs
load-generator/: Dockerfile  docker-compose.yml  load_generator.py
monitoring/: dashboard.html  metrics-api.py
mpeg-dash-client/: test-dash.html
mpeg-dash-processor/: README.md  run-server.bat  run-server.ps1
mpeg-dash-processor/Application/: Application.csproj  Application.http  Dockerfile  Program.cs
mpeg-dash-processor/Application/Properties/: launchSettings.json
mpeg-dash-processor/Application/Scripts/: README.md  run-server.ps1  run-server.sh
publish-subscribe/: README.md  docker-compose.yml  nanomq.conf
src/: docker-compose.yml
src/chart-generators/fail_rate/: Dockerfile  config.json  fail_rate.py
src/chart-generators/latency/: Dockerfile  config.json  latency.py
src/chart-generators/quality_per_frame/: Dockerfile  config.json  quality_per_frame.py
src/chart-generators/stalls_per_frame/: Dockerfile  config.json  requirements.txt  stalls_per_frame.py
src/core/load-balancer/: .dockerignore  Cargo.toml  Dockerfile
src/core/load-balancer/src/: lib.rs  load_balancer.rs  main.rs  strategy.rs
src/core/load-balancer/src/strategies/: memory_monitoring.rs  mod.rs  random.rs  round_robin.rs  strategy.rs
src/load-generator/: README.md  docker-compose.yml  load_generator.py  requirements.txt
src/monitoring/: collect-metrics.sh  metrics-api.py  requirements.txt
(+14 files in other folders)
