[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
parking_lot = "0.12"
rand = "0.8"
